# crm-api

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
src/entities/: customer.rs
src/interfaces/: mod.rs
src/interfaces/cache/: redis_cache.rs
src/interfaces/controllers/: customer_controller.rs  mod.rs
src/interfaces/database/: mod.rs  scylla_db.rs
src/interfaces/repositories/: customer_repository.rs
src/usecases/: customer_service.rs  mod.rs
