[package]
name = "crm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
redis = "0.25.2"
tokio = { version = "1", features = ["full"] }
cassandra-cpp = "3.0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
async-trait = "0.1.50"